examples/good/eq-variable-var-true.bg
(int x 42)
(var y 42)
(= x y)
