examples/bad/I04-print-function-var.bg
(var x (int [] 42))
(print x)
